--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "babel --presets es2015 -d build/ src/",
     "test": "npm run compile && mocha --compilers js:babel-core/register",
-    "start": "npm run compile && echo '\nRunning script... \n' && node build/index.js"
+    "start": "npm run compile && echo '\nRunning script... \n' && node build/index.js",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "flow-bin": "^0.37.0",
     "mocha": "^3.0.2",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0"
