--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Very simple browser engine for learning.",
   "main": "index.js",
   "scripts": {
-    "compile": "babel --presets es2015 -d build/ src/",
+    "compile": "babel src --out-dir build",
     "test": "npm run compile && mocha --compilers js:babel-core/register",
     "start": "npm run compile && echo '\nRunning script... \n' && node build/index.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
@@ -18,7 +18,8 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "flow-bin": "^0.37.0",
     "mocha": "^3.0.2",
