--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "babel src --out-dir build",
-    "test": "npm run compile && mocha --compilers js:babel-core/register",
+    "test": "jest",
     "start": "npm run compile && echo '\nRunning script... \n' && node build/index.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
@@ -22,7 +22,7 @@
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "flow-bin": "^0.37.0",
-    "mocha": "^3.0.2",
+    "jest": "^20.0.4",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0"
   }
